@@ -121,8 +121,7 @@ We may just hide the on/off toggle in css
 	//& > h2, & > h3, & > h4,  { margin-top:0; }
 }
 .page-content {
-    //margin:0 @padding-base-horizontal  @padding-base-vertical @padding-base-horizontal;
-    margin:0 @padding-base-horizontal;
+    padding: @padding-base-horizontal;
 }
 
 
