@@ -51,14 +51,14 @@
     </c:set>
 
   <%-- view --%>
-  <wiki:CheckRequestContext context='info|diff|upload|rename|edit'>
+  <wiki:CheckRequestContext context='info|diff|upload|rename|edit|conflict'>
   <li id="view">
     <wiki:Link page="${page}" ><fmt:message key="view.tab"/></wiki:Link>
   </li>
   </wiki:CheckRequestContext>
 
   <%-- attachment --%>
-  <wiki:CheckRequestContext context='view|info|rename|diff|rename|edit'>
+  <wiki:CheckRequestContext context='view|info|rename|diff|rename|edit|conflict'>
   <wiki:PageExists>
   <li id="attach"
    class="<wiki:Permission permission='!upload'>disabled</wiki:Permission>">
@@ -71,7 +71,7 @@
   </wiki:CheckRequestContext>
 
   <%-- info --%>
-  <wiki:CheckRequestContext context='view|info|upload|rename|edit'>
+  <wiki:CheckRequestContext context='view|info|upload|rename|edit|conflict'>
   <wiki:PageExists>
   <li id="info">
     <wiki:Link context="info" accessKey="i">
@@ -194,13 +194,13 @@
           <wiki:CheckVersion mode="latest">
             <wiki:Link cssClass="reader-view">
               <wiki:Param name='skin' value='reader'/>
-              <fmt:message key='actions.showreaderview' /><span class="icon-leanpub" ></span>
+              <fmt:message key='actions.showreaderview' /> <span class="icon-leanpub" ></span>
             </wiki:Link>
           </wiki:CheckVersion>
           <wiki:CheckVersion mode="notlatest">
             <wiki:Link cssClass="reader-view" version="${param.version}">
               <wiki:Param name='skin' value='reader'/>
-              <fmt:message key='actions.showreaderview' /><span class="icon-leanpub" ></span>
+              <fmt:message key='actions.showreaderview' /> <span class="icon-leanpub" ></span>
             </wiki:Link>
           </wiki:CheckVersion>
         </li>
