@@ -33,7 +33,7 @@
 
 <div class="cage pull-right userbox user-${loginstatus}">
 
-  <div class="btn"><span class="icon-user"></span><span class="caret"/></span></div>
+  <div class="btn"><span class="icon-user"></span><span class="caret"></span></div>
 
   <ul class="dropdown-menu pull-right" data-hover-parent=".userbox">
 
@@ -73,8 +73,7 @@
           <wiki:Link cssClass="btn btn-default btn-block" jsp="UserPreferences.jsp">
             <wiki:Param name='redirect' value='${redirect}'/>
             <wiki:Param name='tab' value='groups'/>
-            <span class="icon-group"></span>
-            <fmt:message key="actions.groups" />
+            <span class="icon-group"></span> <fmt:message key="actions.groups" />
           </wiki:Link>
           </wiki:Permission>
          </wiki:CheckRequestContext>
@@ -86,9 +85,8 @@
         <wiki:CheckRequestContext context='!login'>
         <wiki:Permission permission="login">
           <wiki:Link cssClass="btn btn-primary btn-block login" jsp="Login.jsp">
-            <span class="icon-signin"></span>
             <wiki:Param name='redirect' value='${redirect}'/>
-          <fmt:message key="actions.login" />
+            <span class="icon-signin"></span> <fmt:message key="actions.login" />
         </wiki:Link>
         </wiki:Permission>
         <wiki:Permission permission='editProfile'>
@@ -106,8 +104,7 @@
       <wiki:UserCheck status="authenticated">
         <a href="<wiki:Link jsp='Logout.jsp' format='url' />"
           class="btn btn-default btn-block logout" data-modal=".modal">
-            <span class="icon-signout"></span>
-          <fmt:message key="actions.logout"/>
+            <span class="icon-signout"></span> <fmt:message key="actions.logout"/>
           <div class="modal"><fmt:message key='actions.confirmlogout'/></div>
         </a>
       </wiki:UserCheck>
